# photobooth-rs

./: Cargo.toml  Cross.toml  build.rs
proto/: photobooth_server.proto
src/: main.rs
