[package]
name = "photobooth"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.12.3"
gphoto2 = "3.3.1"
futures = "0.3"


[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "photobooth-server"
path = "src/main.rs"
