[package]
name = "photobooth"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["full"] }
tonic-reflection = "0.12.3"
gphoto2 = "3.3.1"
futures = "0.3"
axum = "0.8.3"
tower = "0.5.2"
async-stream = "0.3.6"
gpiod = "0.3.0"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "photobooth-server"
path = "src/main.rs"
